--- a/APM-Final-v19/src/app/home/welcome.component.html
+++ b/APM-Final-v19/src/app/home/welcome.component.html
@@ -5,20 +5,10 @@
   <div class="card-body">
     <div class="container-fluid">
       <div class="text-center">
-        <img src="./assets/images/logo.jpg"
-             class="img-responsive center-block"
-             style="max-height:300px;padding-bottom:50px" />
-      </div>
-
-      <div class="text-center">Developed by:</div>
-      <div class="text-center">
-        <h3>Deborah Kurata</h3>
-      </div>
-
-      <div class="text-center">&#64;deborahkurata</div>
-      <div class="text-center">
-        <a href="https://youtube.com/@deborah_kurata">Deborah's YouTube Channel</a>
-      </div>
+        <img src="./assets/images/logo.webp"
+             class="img-responsive"
+             style="width:50%;padding-bottom:50px" />
+            </div>
     </div>
   </div>
 </div>
