added reactive form and signals

--- a/APM-Final-v19/src/app/products/product-list.component.html
+++ b/APM-Final-v19/src/app/products/product-list.component.html
@@ -9,6 +9,8 @@
         <input type='text'
                (input)='onFilterChange($any($event.target).value)'
                [value] = 'listFilter()' />
+        <!-- <input type='text' [(ngModel)]="listFilter" /> -->
+
       </div>
     </div>
     <div class='row'
