--- a/APM-Final-v19/src/app/app.component.css
+++ b/APM-Final-v19/src/app/app.component.css
@@ -1,3 +1,7 @@
 .nav-link {
   font-size: large;
 }
+.nav-link.active {
+  background-color: #00a2ff; /* Blue background */
+  color: white; /* White text */
+}
