--- a/APM-Final-v19/src/app/app.component.html
+++ b/APM-Final-v19/src/app/app.component.html
@@ -1,6 +1,13 @@
-<div style="text-align:center">
-  <h1>
-    TaDa! Welcome to {{title}}!!
-  </h1>
-  ... Starter Files ...
+<nav class='navbar navbar-expand navbar-light bg-light'>
+  <a class='navbar-brand'></a>
+  <ul class='nav nav-pills'>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/welcome'>Home</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/products'>Product List</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/newproducts'>New Product List</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/submitForm'>Submit Form</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/about'>About</a></li>
+  </ul>
+</nav>
+<div class='container'>
+<router-outlet></router-outlet>
 </div>
